--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,5 @@ PORT = 5000
 MONGO_URI=mongodb+srv://asmita18ashii:RKqxfBslnFjeeO5o@cluster0.rvdls36.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=asmita18ashii
 NODE_ENV=production
+CORS_ROUTE=https://letschatndtalk.netlify.app
+# CORS_ROUTE=http://localhost:3000
