--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
 PORT = 5000
-MONGO_URI=mongodb+srv://asmita18ashii:RKqxfBslnFjeeO5o@cluster0.rvdls36.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-JWT_SECRET=asmita18ashii
+MONGO_URI=mongodb+srv://asmita18ashii:6vCehIghhVzPbZvb@chat-app.ihxwh.mongodb.net/?retryWrites=true&w=majority&appName=chat-app
 NODE_ENV=production
 CORS_ROUTE=https://letschatndtalk.netlify.app
 # CORS_ROUTE=http://localhost:3000
+JWT_SECRET="asmita18ashii"
