--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,12 +9,14 @@
     "@cloudinary/url-gen": "^1.19.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@lottiefiles/react-lottie-player": "^3.5.4",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
     "framer-motion": "^11.1.1",
     "i": "^0.3.7",
+    "lottie-react": "^2.4.0",
     "npm": "^10.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
